--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.2.2",
     "@vueuse/core": "^6.5.3",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
