--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^6.5.3",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
+    "opencv-build": "^0.1.9",
     "postcss": "^8.3.9",
     "vue": "^3.2.16",
     "vue-router": "^4.0.11",
